src/blocks/marquee/marquee.scss
.marquee {
	$self: &;
	border-top: 2px solid #0B4B54;
	background-color: #08313C;
	color: #fff;
	min-height: 64px;
	position: relative;
	overflow: hidden;
	display: flex;
	
	@keyframes marquee {
		from {  transform: translateX(100%); }
		to { transform: translateX(-100%); }
	}
	
	&__item {
		font-family: "MB", sans-serif;
		font-size: 22px;
		letter-spacing: 0.09em;
		text-transform: uppercase;
		text-align: center;
		white-space: nowrap;
		flex-shrink: 0;
		animation: marquee 50s linear infinite;
		position: absolute;
		top: 30%;
		width: 140%;
		
		@include media('<=xlg') {
			animation-duration: 40s;
			width: 170%;
		}
		
		@include media('<=sm') {
			width: 1300px;
		}
		
		&:nth-child(1) {
			animation-delay: -25s;
			
			@include media('<=xlg') {
				animation-delay: -20s;
			}
		}
		
		&:nth-child(2) {
			transform: translateX(100%);
		}
		
		@include media('<=xs') {
			font-size: 20px;
		}
	}
}

